--- a/assets/style.css
+++ b/assets/style.css
@@ -106,3 +106,10 @@ body {
 	color: black;
 	cursor: pointer;
 }
+.attribution {
+				font-size: 11px;
+				text-align: center;
+			}
+			.attribution a {
+				color: hsl(228, 45%, 44%);
+			}
